security.tf
# SG pour le Load Balancer (public)
resource "aws_security_group" "alb_sg" {
  name        = "alb-sg"
  description = "ALB - acces HTTP/HTTPS depuis Internet"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "SG-ALB" }
}

# SG pour ECS (le backend FastAPI)
resource "aws_security_group" "ecs_sg" {
  name        = "ecs-sg"
  description = "ECS - accessible uniquement depuis ALB"
  vpc_id      = aws_vpc.main.id

  # Le port applicatif, ouvert seulement vers l'ALB
  ingress {
    from_port       = 8000
    to_port         = 8000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "SG-ECS" }
}
